ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: hass
  namespace: hass
spec:
  ingressClassName: public
  rules:
  - host: hass.anirad.cz
    http:
      paths:
      - backend:
          service:
            name: hass
            port:
              number: 8123
        path: /
        pathType: Prefix
  - host: hass.prg.anirad.cz
    http:
      paths:
      - backend:
          service:
            name: hass
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hass.anirad.cz
    secretName: hass-tls-prod
  - hosts:
    - hass.prg.anirad.cz
    secretName: hass-prg-tls-prod
